[project]
name = "cython-vs-cpp-vs-python"
version = "0.1.0"
description = "Compare performance of Python, Cython and C++ simple server implementations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.0.11",
    "fastapi>=0.115.5",
    "setuptools>=75.6.0",
    "uvicorn>=0.32.1",
]
